--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "react-native-macos-reminders",
+  "name": "reactNativeReminders",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native-macos/local-cli/cli.js start --use-react-native-macos",
+    "start:macos": "node node_modules/react-native-macos/local-cli/cli.js start --use-react-native-macos",
+    "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
     "pods": "npx pod-install",
     "update-lock": "npx yarn-deduplicate",
-    "postinstall": "yarn update-lock && yarn pods"
+    "postinstall": "yarn update-lock && yarn pods",
+    "windows": "react-native run-windows"
   },
   "dependencies": {
     "@rn-macos/popover": "^0.1.0",
     "react": "17.0.2",
     "react-native": "0.68.3",
+    "react-native-macos": "0.68.42",
     "react-native-mmkv": "^2.4.3",
-    "react-native-macos": "0.68.42"
+    "react-native-windows": "0.68.30"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
@@ -24,6 +27,7 @@
     "eslint": "^8.23.0",
     "eslint-config-universe": "^11.0.0",
     "jest": "^29.0.2",
+    "metro-config": "^0.67.0",
     "metro-react-native-babel-preset": "^0.68.0",
     "prettier": "^2.7.1",
     "react-test-renderer": "17.0.2",
